# khetha-django

./: .buildpacks  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .travis.yml  Dockerfile  Dockerfile.deploy  Pipfile  Procfile  README.md  build-assets.sh  docker-compose-deploy.yml  docker-compose.yml  mypy.ini  package-lock.json  package.json  requirements-dev.txt  requirements-pipenv-dev.txt  requirements-pipenv.txt  requirements-update.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
deploy/: docker-compose.cache-from.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf
scripts/: dumpdata.sh
src/: manage.py
src/django_missing_bits/: missing_utils.py
src/khetha/: admin.py  models.py  settings.py  settings_env.py  urls.py  views.py  wsgi.py
src/khetha/fixtures/: sample-task-data.json
src/khetha/migrations/: 0001_initial.py  0002_schema_sketch.py  0003_add_task_question_ordering.py  0004_add_submissions.py  0005_question_display_type.py  0006_question_display_type_place_field.py
src/khetha/static/khetha/: old-school-hacks.js  site.css  site.js
src/khetha/templates/khetha/: base.html  task_completed_list.html  task_detail.html  task_list.html
src/khetha/templates/khetha/includes/: admin_link.html  card_icon_row.html  question_card.html  task_card.html  task_card_inner.html  tasksubmission_card.html
src/khetha/templatetags/: khetha_tags.py
tests/: helpers.py  test_khetha_tags.py  test_models.py  test_smoke.py  test_views.py
(+7 files in other folders)
