[metadata]
name = khetha-django

[options]
package_dir = =src
packages = find:
include_package_data = True

setup_requires =
    setuptools_scm

install_requires =
    Django >=2.1,<2.3

    # Django libraries:
    django-admin-sortable2
    django-environ
    whitenoise[brotli]

    psycopg2

[options.packages.find]
where = src
